force-app/main/default/objects/Lead/fields/Ad_Group__c.field-meta.xml
<CustomField>
    <fullName>Ad_Group__c</fullName>
    <label>Ad Group</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>