force-app/main/default/objects/Lead/fields/Age_of_Child_3__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Child_3__c</fullName>
    <label>Age of Child 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>