force-app/main/default/objects/Lead/fields/Anarock_Portal__c.field-meta.xml
<CustomField>
    <fullName>Anarock_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anarock Portal</label>
    <type>Checkbox</type>
</CustomField>