force-app/main/default/objects/Lead/fields/Anarock_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Anarock_Sourcing_Manager__c</fullName>
    <label>Anarock Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>Aashish Bodhwani</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Bushra Shaikh</fullName>
            </value>
            <value>
                <fullName>Adarsh Pandey</fullName>
            </value>
            <value>
                <fullName>A Deepak Dubey</fullName>
            </value>
            <value>
                <fullName>A Dikshant Wankhede</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>A Harshal Randhive</fullName>
            </value>
            <value>
                <fullName>A Jagruti More</fullName>
            </value>
            <value>
                <fullName>A Janki Singh</fullName>
            </value>
            <value>
                <fullName>A Kamlesh Malviya</fullName>
            </value>
            <value>
                <fullName>Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Khalid Khan</fullName>
            </value>
            <value>
                <fullName>A Manan Seth</fullName>
            </value>
            <value>
                <fullName>Anarock central zone</fullName>
            </value>
            <value>
                <fullName>A Navnit Singh</fullName>
            </value>
            <value>
                <fullName>A Nilesh Pande</fullName>
            </value>
            <value>
                <fullName>A Ninad Gade</fullName>
            </value>
            <value>
                <fullName>Ankush Tayade</fullName>
            </value>
            <value>
                <fullName>A Priyanka Makhija</fullName>
            </value>
            <value>
                <fullName>A Ravi Hinduja</fullName>
            </value>
            <value>
                <fullName>A Rohit Agawane</fullName>
            </value>
            <value>
                <fullName>A Sahil Thorve</fullName>
            </value>
            <value>
                <fullName>A Sanjana Rajpurohit</fullName>
            </value>
            <value>
                <fullName>A Sanjana Singh</fullName>
            </value>
            <value>
                <fullName>A Sarika Shinde</fullName>
            </value>
            <value>
                <fullName>A Shraddha Pandey</fullName>
            </value>
            <value>
                <fullName>Asim master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>