force-app/main/default/objects/Lead/fields/AOP_Type__c.field-meta.xml
<CustomField>
    <fullName>AOP_Type__c</fullName>
    <description>For AOP Categorization</description>
    <inlineHelpText>For AOP Categorization</inlineHelpText>
    <label>AOP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOP</fullName>
            </value>
            <value>
                <fullName>Non AOP</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>RCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>