force-app/main/default/objects/Lead/fields/Auto_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Call Completed</label>
    <type>Checkbox</type>
</CustomField>