force-app/main/default/objects/Lead/fields/Banner_Type__c.field-meta.xml
<CustomField>
    <fullName>Banner_Type__c</fullName>
    <label>Banner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>