force-app/main/default/objects/Lead/fields/Budget_In_Lakh__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_Lakh__c</fullName>
    <label>Budget In Lakh</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>