force-app/main/default/objects/Lead/fields/call_proposed_date_of_visit__c.field-meta.xml
<CustomField>
    <fullName>call_proposed_date_of_visit__c</fullName>
    <label>Del_Last Call Proposed Date Of Visit</label>
    <type>DateTime</type>
</CustomField>