force-app/main/default/objects/Lead/fields/Calling_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Calling_Campaign__c</fullName>
    <label>Calling Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign 1</fullName>
            </value>
            <value>
                <fullName>Campaign 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>