force-app/main/default/objects/Lead/fields/Calling_Closing_SM__c.field-meta.xml
<CustomField>
    <fullName>Calling_Closing_SM__c</fullName>
    <label>Calling - Closing SM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aashima Shaikh</fullName>
            </value>
            <value>
                <fullName>Aditya Salunkhe</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>A Jagruti More</fullName>
            </value>
            <value>
                <fullName>Akhil Raj</fullName>
            </value>
            <value>
                <fullName>Alok Gupta</fullName>
            </value>
            <value>
                <fullName>Amaan Shaikh</fullName>
            </value>
            <value>
                <fullName>Amit Govindani</fullName>
            </value>
            <value>
                <fullName>A Ninad Gade</fullName>
            </value>
            <value>
                <fullName>A Sanjana Rajpurohit</fullName>
            </value>
            <value>
                <fullName>A Sanjana Singh</fullName>
            </value>
            <value>
                <fullName>A Shraddha Pandey</fullName>
            </value>
            <value>
                <fullName>A Simran Chhangani</fullName>
            </value>
            <value>
                <fullName>Atul Khedkar</fullName>
            </value>
            <value>
                <fullName>Atul Sharma</fullName>
            </value>
            <value>
                <fullName>Babita Verma</fullName>
            </value>
            <value>
                <fullName>Bhagyashree Mengane</fullName>
            </value>
            <value>
                <fullName>Bhavik Bhorraut</fullName>
            </value>
            <value>
                <fullName>Darshan Shinde</fullName>
            </value>
            <value>
                <fullName>Deepika Nainani</fullName>
            </value>
            <value>
                <fullName>Dhanashree Mondkar</fullName>
            </value>
            <value>
                <fullName>Ganesh Panaskar</fullName>
            </value>
            <value>
                <fullName>Gurpreet Kaur</fullName>
            </value>
            <value>
                <fullName>Harshal Muthe</fullName>
            </value>
            <value>
                <fullName>Hemangini Bharati</fullName>
            </value>
            <value>
                <fullName>Hitesh Borse</fullName>
            </value>
            <value>
                <fullName>Jaswinder Singh Rain</fullName>
            </value>
            <value>
                <fullName>Jayshri Pabrekar</fullName>
            </value>
            <value>
                <fullName>Jovita Abreo</fullName>
            </value>
            <value>
                <fullName>Keertika Rao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>