force-app/main/default/objects/Lead/fields/Campaign_Name_from_CTI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_from_CTI__c</fullName>
    <label>Campaign Name from CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>