force-app/main/default/objects/Lead/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>