force-app/main/default/objects/Lead/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <label>Complete Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>