force-app/main/default/objects/Lead/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>