force-app/main/default/objects/Lead/fields/CreateDate_Time__c.field-meta.xml
<CustomField>
    <fullName>CreateDate_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDate/Time</label>
    <type>DateTime</type>
</CustomField>