force-app/main/default/objects/Lead/fields/CRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager__c</fullName>
    <label>CRM Sourcing Manger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>Aakash Motwani</fullName>
            </value>
            <value>
                <fullName>Aaliya Kirkire</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>Aarti Kochrekar</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhishek Acharya</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>A Bushra Shaikh</fullName>
            </value>
            <value>
                <fullName>A Deepak Dubey</fullName>
            </value>
            <value>
                <fullName>Aditi Dubey</fullName>
            </value>
            <value>
                <fullName>Aditya Kalkotwar</fullName>
            </value>
            <value>
                <fullName>Adrian Dsouza</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>A Jagruti More</fullName>
            </value>
            <value>
                <fullName>A Kamlesh Malviya</fullName>
            </value>
            <value>
                <fullName>Akanksha Ghodke</fullName>
            </value>
            <value>
                <fullName>Akanksha Mukhiya</fullName>
            </value>
            <value>
                <fullName>A Khalid Khan</fullName>
            </value>
            <value>
                <fullName>AKHIL RAJ</fullName>
            </value>
            <value>
                <fullName>Altamash Hawaldar</fullName>
            </value>
            <value>
                <fullName>A Manan Seth</fullName>
            </value>
            <value>
                <fullName>Amir khan</fullName>
            </value>
            <value>
                <fullName>Amrita Dhall</fullName>
            </value>
            <value>
                <fullName>Amrita Parui</fullName>
            </value>
            <value>
                <fullName>Anand Shah</fullName>
            </value>
            <value>
                <fullName>Anarock AOP</fullName>
            </value>
            <value>
                <fullName>Anarock central zone</fullName>
            </value>
            <value>
                <fullName>Anarock KDMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>