force-app/main/default/objects/Lead/fields/CTA_Source__c.field-meta.xml
<CustomField>
    <fullName>CTA_Source__c</fullName>
    <label>CTA Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>