force-app/main/default/objects/Lead/fields/Distance_To_Office__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Office__c</fullName>
    <label>Distance To Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less Than 10 Kms</fullName>
            </value>
            <value>
                <fullName>10 Kms - 20 Kms</fullName>
            </value>
            <value>
                <fullName>20 Kms - 30 Kms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>