force-app/main/default/objects/Lead/fields/DuplicatesIdentified__c.field-meta.xml
<CustomField>
    <fullName>DuplicatesIdentified__c</fullName>
    <label>DuplicatesIdentified</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>