force-app/main/default/objects/Lead/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Education</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
            <value>
                <fullName>Master’s Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate or Higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>