force-app/main/default/objects/Lead/fields/Employee_Reference__c.field-meta.xml
<CustomField>
    <fullName>Employee_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Reference</label>
    <referenceTo>RW_Employee__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>