force-app/main/default/objects/Lead/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <label>Event Start Time</label>
    <length>60</length>
    <type>Text</type>
</CustomField>