force-app/main/default/objects/Lead/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FU</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>