force-app/main/default/objects/Lead/fields/First_Call_Attempt_Time_Gap__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempt_Time_Gap__c</fullName>
    <formula>(First_Call_Attempt_Date__c - CreatedDate) * 24</formula>
    <label>First Call Attempt Time Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>