force-app/main/default/objects/Lead/fields/Generated_OTP_On_Lead__c.field-meta.xml
<CustomField>
    <fullName>Generated_OTP_On_Lead__c</fullName>
    <label>Generated OTP On Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>