force-app/main/default/objects/Lead/fields/IP_Address_Web2Lead__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Web2Lead__c</fullName>
    <label>IP Address Web2Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>