force-app/main/default/objects/Lead/fields/is_NRI__c.field-meta.xml
<CustomField>
    <fullName>is_NRI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is NRI</label>
    <type>Checkbox</type>
</CustomField>