force-app/main/default/objects/Lead/fields/Is_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Owner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Record_Owner</label>
    <type>Checkbox</type>
</CustomField>