force-app/main/default/objects/Lead/fields/Is_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Is_Serviced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Serviced</label>
    <type>Checkbox</type>
</CustomField>