force-app/main/default/objects/Lead/fields/IsFirstSalesCall__c.field-meta.xml
<CustomField>
    <fullName>IsFirstSalesCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstSalesCall</label>
    <type>Checkbox</type>
</CustomField>