force-app/main/default/objects/Lead/fields/Kserve_Integration__c.field-meta.xml
<CustomField>
    <fullName>Kserve_Integration__c</fullName>
    <formula>IF( RW_Project__r.Kserve_Integration__c = true,true ,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kserve Integration</label>
    <type>Checkbox</type>
</CustomField>