force-app/main/default/objects/Lead/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <label>Last Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>