force-app/main/default/objects/Lead/fields/Latest_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Next_Action_Date__c</fullName>
    <label>Latest Next Action Date</label>
    <type>DateTime</type>
</CustomField>