force-app/main/default/objects/Lead/fields/LatestDuplicates__c.field-meta.xml
<CustomField>
    <fullName>LatestDuplicates__c</fullName>
    <label>Latest Duplicates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>