force-app/main/default/objects/Lead/fields/Lead_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification__c</fullName>
    <label>Lead Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>